DFR-2811-update to List.of